--- a/Lab1 miguel/proj1/TestApp1/TestApp1.vcxproj
+++ b/Lab1 miguel/proj1/TestApp1/TestApp1.vcxproj
@@ -148,10 +148,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="cube.h" />
+    <ClInclude Include="vsMathLib.h" />
     <ClInclude Include="vsShaderLib.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="exercise1.cpp" />
+    <ClCompile Include="vsMathLib.cpp" />
     <ClCompile Include="vsShaderLib.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
