--- a/Projecto_v1/Proj_v1/Proj_v1.vcxproj.filters
+++ b/Projecto_v1/Proj_v1/Proj_v1.vcxproj.filters
@@ -76,13 +76,13 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="shaders\blinnphong.frag" />
-    <None Include="shaders\blinnphong.vert" />
     <None Include="shaders\gouraud.frag" />
     <None Include="shaders\gouraud.vert" />
     <None Include="shaders\lab.frag" />
     <None Include="shaders\lab.vert" />
     <None Include="shaders\pointlight.frag" />
     <None Include="shaders\pointlight.vert" />
+    <None Include="shaders\phong.vert" />
+    <None Include="shaders\phong.frag" />
   </ItemGroup>
 </Project>
