--- a/Projecto_v1/Proj_v1/Proj_v1.vcxproj
+++ b/Projecto_v1/Proj_v1/Proj_v1.vcxproj
@@ -149,17 +149,20 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Alien.cpp" />
+    <ClCompile Include="Alien_Shot.cpp" />
     <ClCompile Include="AVTmathLib.cpp" />
     <ClCompile Include="basic_geometry.cpp" />
     <ClCompile Include="FixedPerspCamera.cpp" />
     <ClCompile Include="FollowPerspCamera.cpp" />
     <ClCompile Include="SpaceInvaders.cpp" />
     <ClCompile Include="Spaceship.cpp" />
+    <ClCompile Include="Spaceship_Shot.cpp" />
     <ClCompile Include="TopOrthoCamera.cpp" />
     <ClCompile Include="vsShaderLib.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Alien.h" />
+    <ClInclude Include="Alien_Shot.h" />
     <ClInclude Include="AVTmathLib.h" />
     <ClInclude Include="basic_geometry.h" />
     <ClInclude Include="Camera.h" />
@@ -169,6 +172,7 @@
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="DynamicObject.h" />
     <ClInclude Include="Spaceship.h" />
+    <ClInclude Include="Spaceship_Shot.h" />
     <ClInclude Include="StaticObject.h" />
     <ClInclude Include="TopOrthoCamera.h" />
     <ClInclude Include="Vec3.h" />
