--- a/Projecto_v1/Proj_v1/Proj_v1.vcxproj
+++ b/Projecto_v1/Proj_v1/Proj_v1.vcxproj
@@ -165,6 +165,7 @@
     <ClInclude Include="Alien_Shot.h" />
     <ClInclude Include="AVTmathLib.h" />
     <ClInclude Include="basic_geometry.h" />
+    <ClInclude Include="Box.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="cube.h" />
     <ClInclude Include="FixedPerspCamera.h" />
