--- a/Projecto_v1/Proj_v1/Proj_v1.vcxproj
+++ b/Projecto_v1/Proj_v1/Proj_v1.vcxproj
@@ -157,6 +157,7 @@
     <ClCompile Include="SpaceInvaders.cpp" />
     <ClCompile Include="Spaceship.cpp" />
     <ClCompile Include="Spaceship_Shot.cpp" />
+    <ClCompile Include="StarsBackground.cpp" />
     <ClCompile Include="TGA.cpp" />
     <ClCompile Include="TopOrthoCamera.cpp" />
     <ClCompile Include="vsShaderLib.cpp" />
@@ -175,6 +176,7 @@
     <ClInclude Include="DynamicObject.h" />
     <ClInclude Include="Spaceship.h" />
     <ClInclude Include="Spaceship_Shot.h" />
+    <ClInclude Include="StarsBackground.h" />
     <ClInclude Include="StaticObject.h" />
     <ClInclude Include="TGA.h" />
     <ClInclude Include="TopOrthoCamera.h" />
