--- a/Projecto_v1/Proj_v1/Proj_v1.vcxproj
+++ b/Projecto_v1/Proj_v1/Proj_v1.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="Spaceship.cpp" />
     <ClCompile Include="Spaceship_Shot.cpp" />
     <ClCompile Include="StarsBackground.cpp" />
+    <ClCompile Include="StencilPortal.cpp" />
     <ClCompile Include="TGA.cpp" />
     <ClCompile Include="TopOrthoCamera.cpp" />
     <ClCompile Include="vsShaderLib.cpp" />
@@ -178,6 +179,7 @@
     <ClInclude Include="Spaceship_Shot.h" />
     <ClInclude Include="StarsBackground.h" />
     <ClInclude Include="StaticObject.h" />
+    <ClInclude Include="StencilPortal.h" />
     <ClInclude Include="TGA.h" />
     <ClInclude Include="TopOrthoCamera.h" />
     <ClInclude Include="Vec3.h" />
