translucent falta blending provavelmente

--- a/Projecto_v1/Proj_v1/Proj_v1.vcxproj.filters
+++ b/Projecto_v1/Proj_v1/Proj_v1.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="StencilPortal.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="PortalLiquid.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AVTmathLib.h">
@@ -120,6 +123,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="StencilPortal.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PortalLiquid.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
