--- a/Projecto_v1/Proj_v1/Proj_v1.vcxproj
+++ b/Projecto_v1/Proj_v1/Proj_v1.vcxproj
@@ -154,6 +154,7 @@
     <ClCompile Include="basic_geometry.cpp" />
     <ClCompile Include="FixedPerspCamera.cpp" />
     <ClCompile Include="FollowPerspCamera.cpp" />
+    <ClCompile Include="PortalLiquid.cpp" />
     <ClCompile Include="SpaceInvaders.cpp" />
     <ClCompile Include="Spaceship.cpp" />
     <ClCompile Include="Spaceship_Shot.cpp" />
@@ -175,6 +176,7 @@
     <ClInclude Include="FollowPerspCamera.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="DynamicObject.h" />
+    <ClInclude Include="PortalLiquid.h" />
     <ClInclude Include="Spaceship.h" />
     <ClInclude Include="Spaceship_Shot.h" />
     <ClInclude Include="StarsBackground.h" />
