--- a/Projecto_v1/Proj_v1/Proj_v1.vcxproj.filters
+++ b/Projecto_v1/Proj_v1/Proj_v1.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="Asteroid.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="objloader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AVTmathLib.h">
@@ -150,6 +153,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Asteroid.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="objloader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
